fix wrong ChokeSides implementation to something reasonable